# y11-rfdetr

./: .gitignore  .pre-commit-config.yaml  README.md  docs.md  pyproject.toml  requirements.txt  video_detect.py
.github/workflows/: update_requirements.yml
configs/: yolo11n-p2.yaml
deployment/jetson/: export_tensorrt.py  inference_tensorrt.py
docs/: context.md  jetson.md  model_yaml_config.md  precision.md  reasearch.md  rf-detr.md  sahi.md  visdrone.md  yolo.md
notebooks/: train_colab.ipynb  train_colab_sahi.ipynb  train_colab_stand.ipynb  train_colab_standard.ipynb
scripts/: augment_fog.py  download_data.py  download_visdrone.py  ensemble.py  export_requirements.py  inference_sahi.py  merge_datasets.py  prepare_visdrone.py  prepare_visdrone_.py  run_all.sh  train_pipeline.py  train_rfdetr.py  train_yolo.py  tune_hyperparameters.py  verify_setup.py
