[project]
name = "y11-rfdetr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.3",
    "pyyaml>=6.0.3",
    "sahi>=0.11.36",
    "seaborn>=0.13.2",
    "supervision>=0.27.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
    "ultralytics>=8.3.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.0",
]
