[project]
name = "y11-rfdetr"
version = "0.1.0"
description = "YOLOv11 person-only detection training on VisDrone dataset"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.5",
    "opencv-python-headless>=4.11.0.86",
    "pyyaml>=6.0.3",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "ultralytics>=8.3.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.0",
]
